# rust-postgre

./: .env  Cargo.toml  README.md
migrations/: 20250626154022_create_table_categories.up.sql  20250626154422_create_table_brands.up.sql
src/: main.rs  result_mapping.rs
