[package]
name = "rust-postgre"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
